deploy/gitlab.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gitlab
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
      - name: gitlab
        image: gitlab/gitlab-ce:latest

        ports:
        - name: http
          containerPort: 80
        - name: ssh
          containerPort: 22
        - name: ssl
          containerPort: 443

        # Mount all three gitlab volumes into subdirectories of the same pv claim.
        volumeMounts:
        - mountPath: /etc/gitlab
          name: gitlab-pvc
          subPath: config
        - mountPath: /var/log/gitlab
          name: gitlab-pvc
          subPath: logs
        - mountPath: /var/opt/gitlab
          name: gitlab-pvc
          subPath: data

      volumes:
        - name: gitlab-pvc
          persistentVolumeClaim:
            claimName: gitlab-persistent-volume-claim  # This matches the persistent volume claim name above

---

apiVersion: v1
kind: Service
metadata:
  name: gitlab
  labels:
    app: gitlab
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  - port: 22
    targetPort: ssh
    protocol: TCP
    name: ssh
  - port: 443
    targetPort: ssl
    protocol: TCP
    name: ssl
  selector:
    app: gitlab
