deploy/postgres.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres-gitlab
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-gitlab
    spec:
      containers:
      - name: postgres
        image: postgres:9.6

        ports:
        - name: postgres-port
          containerPort: 5432

        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-pvc

      volumes:
        - name: postgres-pvc
          persistentVolumeClaim:
            claimName: postgres-persistent-volume-claim

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-gitlab
  labels:
    app: postgres-gitlab
spec:
  ports:
  - port: 5432
    targetPort: postgres-port
    protocol: TCP
    name: postgres-port
  selector:
    app: postgres-gitlab
