deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-ingress
  annotations:
    ingress.kubernetes.io/proxy-body-size: "200m"
spec:
  rules:
  - host: gitlab.teasdale.link
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: 80
